# ST-CausalConvNet-Attn

./: .gitignore  .mcp.json  CLAUDE.md  README.md  attention_utils.py  config.py  data_process.py  data_process_me.py  eval.py  models.py  package-lock.json  pyproject.toml  requirements.txt  sweep_config.py  test_stcn_v2.py  train.py  train_sweep.py  utils.py
.claude/agents/: code-bloat-preventer.md
data/hezhou_air_data/: 20200101-20250415最大值实况-十四五城市日均值.csv  20200101-20250415逐小时气象要素.csv  aqi.csv  aqi_meteo_merged.csv
data/stations_data/: df_station_1001.csv
doc/: IMPROVED_README.md  IMPROVEMENT_SUMMARY.md
models/: model_STCN.pth
